# colosseum-core

./: Cargo.toml  build.rs
.TODO/content/consumable/: cracked_bellroot_seed.json
.TODO/content/skill/: scorch.json  sweep.json
.TODO/content/weapon/: pipe_iron.json
content/consumable/: cracked_bellroot_seed.json  default.json  grenade.json
content/headwear/: default.json
content/skill/: default.json  scorch.json  sweep.json
content/weapon/: default.json  pipe_iron.json
protos/: aspect.proto  attribute.proto  bodywear.proto  combat_event.proto  combat_state.proto  combatant.proto  consumable.proto  dot.proto  effect.proto  footwear.proto  fraction.proto  gender.proto  handwear.proto  headwear.proto  legwear.proto  message.proto  modifier.proto  opponent.proto  party.proto  skill.proto  target.proto  weapon.proto
src/: ability.rs  action.rs  actions.rs  aspect.rs  attribute.rs  combat_event.rs  combat_state.rs  combatant.rs  connection.rs  consumable.rs  damage.rs  dot.rs  effect.rs  effects.rs  fraction.rs  gender.rs  io.rs  item.rs  items.rs  lib.rs  lifetime.rs  math.rs  message.rs  modifier.rs  modifiers.rs  party.rs  skill.rs  store.rs  target.rs  targeting.rs  weapon.rs  wearable.rs
src/actions/: combat_actions.rs  mod.rs  region_actions.rs
src/item/: bodywear.rs  consumable.rs  equipable.rs  footwear.rs  handwear.rs  headwear.rs  legwear.rs  mod.rs
src/item/equipable/: body_equipable.rs  bodywear.rs  feet_equipable.rs  footwear.rs  hands_equipable.rs  handwear.rs  head_equipable.rs  headwear.rs  legwear.rs  (+3 more)
src/state/: combat_state.rs  mod.rs
