[package]
name = "colosseum-core"
version = "0.1.0"
authors = ["Chay Nabors <chaynabors@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
codegen = "0.1.3"
heck = "0.3.1"

[dependencies]
bincode = "1.3.1"
bytes = "0.6.0"
include_dir = "0.6.0"
lazy_static = "1.4.0"
ncollide3d = "0.26.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
strum = { version = "0.20.0", features = ["derive"] }
tokio = { version = "0.3.6", features = ["io-util", "net"] }
